--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
     <link href="%PUBLIC_URL%/normalize.css" rel="stylesheet" />
     <!-- blueprint-icons.css file must be included alongside blueprint.css! -->
     <link href="%PUBLIC_URL%/blueprint-icons.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/blueprint-datetime.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/blueprint.css" rel="stylesheet" />
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
     <!-- add other blueprint-*.css files here -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
